# network-manager-applet

./: .clang-format  .gitignore  .gitlab-ci.yml  .triage-policies.yml  ChangeLog  Makefile.am  NEWS  autogen.sh  ca.po  config.h.meson  configure.ac  libnma-docs.xml  libnma.doap  meson.build  meson_options.txt  meson_post_install.py  network-manager-applet.doap  nm-applet.conf  nm-applet.convert  nm-applet.desktop  nm-applet.desktop.in  nm-applet.schemas.in  nm-connection-editor.appdata.xml.in  nm-connection-editor.desktop  nm-connection-editor.desktop.in  nm-disconnect-wireless-on-exit.sh  org.gnome.nm-applet.gschema.xml.in  org.gnome.nm-connection-editor.appdata.xml.in  zanata.xml
NETWORKMANAGER_APPLET_0_7/src/polkit-helpers/: Makefile.am  polkit-gnome-action.c  polkit-gnome-context.c  polkit-gnome-context.h  polkit-gnome.h
editor/: Makefile.am  bssid-editor-dialog.c  bssid-editor-dialog.h  editor-app.c  editor-app.h  editor-gconf-helper.c  editor-gconf-helper.h  editor-keyring-helper.c  editor-keyring-helper.h  editor.glade  nm-editor.desktop  widget-wso-leap.c  widget-wso-wep.c  widget-wso-wpa-enterprise.c  widget-wso-wpa-personal.c  widget-wso.h
icons/: Makefile.am  meson.build
icons/16/: Makefile.am
icons/22/: Makefile.am
icons/scalable/: Makefile.am
icons/status/: Makefile.am
icons/status/16/: Makefile.am
icons/status/22/: Makefile.am
icons/status/32/: Makefile.am
icons/status/scalable/: Makefile.am
man/: meson.build  nm-applet.1.in  nm-connection-editor.1.in
shared/: Makefile.am  meson.build  nm-default.h  nm-libnm-compat.h
shared/nm-utils/: nm-glib.h
src/: 8021x.ui  Makefile.am  ap-menu-item.c  ap-menu-item.h  applet-agent.c  applet-agent.h  applet-compat.c  applet-compat.h  applet-dbus-devices.c  applet-dbus-devices.h  applet-dbus-info.c  applet-dbus-info.h  applet-dbus-manager.c  applet-dbus-manager.h  applet-dbus-settings.c  applet-dbus-settings.h  applet-dbus.c  applet-dbus.h  applet-device-bond.c  applet-device-bridge.c  applet-device-broadband.c  applet-device-broadband.h  applet-device-bt.c  applet-device-bt.h  applet-device-cdma.c  applet-device-cdma.h  applet-device-ethernet.c  applet-device-ethernet.h  applet-device-gsm.c  applet-device-gsm.h  applet-device-infiniband.c  applet-device-team.c  applet-device-vlan.c  applet-device-wifi.c  applet-device-wifi.h  applet-device-wimax.c  applet-device-wimax.h  applet-device-wired.c  applet-device-wired.h  applet-device-wireless.c  (+79 more)
src/connection-editor/: Makefile.am  byte-array-editor.c  byte-array-editor.h  ce-ip4-routes.ui  ce-ip6-routes.ui  ce-mobile-wizard.glade  ce-new-connection.ui  ce-page-bluetooth.ui  ce-page-bond.ui  ce-page-bridge-port.ui  ce-page-bridge.ui  ce-page-dcb.ui  ce-page-dsl.glade  ce-page-dsl.ui  ce-page-ethernet.ui  ce-page-general.ui  ce-page-infiniband.ui  ce-page-ip-tunnel.ui  ce-page-ip4-address.glade  ce-page-ip4.glade  ce-page-ip4.ui  ce-page-ip6.glade  ce-page-ip6.ui  ce-page-macsec.ui  ce-page-mobile.glade  ce-page-mobile.ui  ce-page-ppp.glade  ce-page-ppp.ui  ce-page-proxy.ui  ce-page-team-port.ui  ce-page-team.ui  ce-page-vlan.ui  ce-page-wifi-security.ui  ce-page-wifi.ui  ce-page-wimax.ui  ce-page-wired.glade  ce-page-wired.ui  ce-page-wireguard.ui  ce-page-wireless-security.glade  ce-page-wireless-security.ui  (+104 more)
src/gconf-helpers/: Makefile.am  gconf-helpers.c  gconf-helpers.h  gconf-upgrade.c  gconf-upgrade.h  nma-gconf-connection.c  nma-gconf-connection.h  nma-gconf-settings.c  nma-gconf-settings.h
src/gnome-bluetooth/: Makefile.am  bt-widget.c  network-manager-applet.c  nma-bling-spinner.c  nma-bling-spinner.h  nma-bt-device.c
src/libnm-gtk/: Makefile.am  check-exports.sh  init.c  libnm-gtk.pc.in  libnm-gtk.ver  meson.build  nm-cert-chooser.h  nm-mobile-providers.c  nm-mobile-providers.h  nm-mobile-wizard.c  nm-mobile-wizard.h  nm-ui-utils.c  nm-ui-utils.h  nm-vpn-password-dialog.c  nm-vpn-password-dialog.h  nm-wifi-dialog.c  nm-wifi-dialog.h  nm-wireless-dialog.c  nm-wireless-dialog.h  wifi.ui
src/libnma/: Makefile.am  init.c  libnma.pc.in  libnma.ver  meson.build  nma-bar-code-widget.c  nma-bar-code-widget.h  nma-bar-code-widget.ui  nma-bar-code.c  nma-bar-code.h  nma-cert-chooser-button.c  nma-cert-chooser.c  nma-cert-chooser.h  nma-file-cert-chooser.c  nma-file-cert-chooser.h  nma-mobile-providers.c  nma-mobile-providers.h  nma-mobile-wizard.c  nma-mobile-wizard.h  nma-mobile-wizard.ui  nma-pkcs11-cert-chooser-dialog.ui  nma-pkcs11-cert-chooser.c  nma-pkcs11-cert-chooser.h  nma-pkcs11-token-login-dialog.ui  nma-private.h  nma-ui-utils.c  nma-ui-utils.h  nma-version.h.in  nma-vpn-password-dialog.c  nma-vpn-password-dialog.h  nma-vpn-password-dialog.ui  nma-wifi-dialog.c  nma-wifi-dialog.h  nma.gresource.xml  wifi.ui
src/marshallers/: Makefile.am  nma-marshal-main.c  nma-marshal.list
src/polkit-helpers/: README  polkit-gnome-action.c  polkit-gnome-action.h  polkit-gnome-auth.c  polkit-gnome-auth.h  polkit-gnome-context.c  polkit-gnome-context.h
src/tests/: ethernet-dialog.c  meson.build
src/utils/: Makefile.am  crypto.c  crypto.h  crypto_gnutls.c  crypto_nss.c  meson.build  mobile-wizard.c  mobile-wizard.h  nm-glib-compat.h  nma-bling-spinner.c  nmn-mobile-providers.c  nmn-mobile-providers.h  test-crypto.c  utils.c  utils.h
src/vpn-properties/: Makefile.am  clipboard.c  nm-vpn-properties.c  nm-vpn-properties.glade  nm-vpn-ui-interface.h
src/wireless-security/: Makefile.am  eap-method-fast.c  eap-method-fast.h  eap-method-fast.ui  eap-method-leap.c  eap-method-leap.h  eap-method-leap.ui  eap-method-peap.c  eap-method-peap.h  eap-method-peap.ui  eap-method-simple.c  eap-method-simple.h  eap-method-simple.ui  eap-method-tls.c  eap-method-tls.h  eap-method-tls.ui  eap-method-ttls.c  eap-method-ttls.h  eap-method-ttls.ui  eap-method.c  eap-method.h  helpers.c  helpers.h  meson.build  nag-user-dialog.ui  wireless-security.c  wireless-security.h  ws-dynamic-wep.c  ws-dynamic-wep.h  ws-dynamic-wep.ui  ws-leap.c  ws-leap.h  ws-leap.ui  ws-wep-key.c  ws-wep-key.h  ws-wep-key.ui  ws-wep-passphrase.c  ws-wep-passphrase.h  ws-wpa-eap.c  ws-wpa-eap.h  (+4 more)
(+210 files in other folders)
